# CameraMotionGuidance

./: .gitignore  README.md  index.html  install.sh  instructions.md  pyproject.toml  requirements.txt
assets/texts/: realestate10k.txt
camera_viz/: batch_viz.sh  dl_realestate.py  makeweb.py  visualize_trajectory.py
cameractrl/models/: __init__.py  pose_adaptor.py
configs/camera/: 16x256x256.py  16x256x256_no_camera.py  16x512x512.py
configs/experiments/: cameractrl.py  cameractrlcmg.py  cameractrlcmg512.py  cameractrlcmgsparse0.py  cameractrlcmgsparse15.py  cameractrlrt.py  cameractrlrtcmg.py  motionctrl.py  motionctrlcmg.py
configs/opensora/inference/: 16x512x512.py
configs/plucker/: 16x256x256.py  16x256x256_no_local_fuser.py  16x512x512.py
configs/realestate/inference/: 16x256x256.py  16x512x512.py
configs/realestate/train/: 16x512x512.py
eval/: eval_prompts.txt  simple_prompts.txt
eval/MotionCtrl/: basic_prompt.txt  prompts.txt  simple_prompts.txt
eval/MotionCtrl/camera_poses/: test_camera_1424acd0007d40b5.txt  test_camera_Round-ZoomIn.txt  test_camera_SPIN-ACW-60.txt  test_camera_SPIN-CW-60.txt  test_camera_d9642c8efc01481d.txt
evaluation/: README.md  camera_error.py  colmap2text.py  colmap_file_io.py  eval.py  eval_cameractrl.py  eval_cfg.py  eval_motionctrl.py  extract_images.sh  run_colmap.sh  run_colmap2.sh  run_colmap_motionctrl.sh
gradio/: app.py  camera_app.py  show_videos.py
opensora/: __init__.py
opensora/datasets/: __init__.py  camera_utils.py  dataset_realestate.py  utils.py  video_transforms.py
opensora/models/: __init__.py
opensora/schedulers/: __init__.py
opensora/utils/: ckpt_utils.py  config_utils.py  train_utils.py  utils.py
scripts/: inference.sh  inference_camera.py  mp4togif.py  train_camera.py
static/css/: index.css
supplementary/: 1_Method_Comparison.htm  2_Ablation.htm  3_SparseControl.htm  README.txt
train_scripts/: run_train_256_cameractrl.sh
(+50 files in other folders)
